#2196 Replaced some deprecated calls, scheduled for removal.